--- a/mysite/socialdist/templates/socialdist/view_post.html
+++ b/mysite/socialdist/templates/socialdist/view_post.html
@@ -35,30 +35,38 @@
     <div class="posts">
       <p>
         <em>
-          @<a href="{% url 'author_profile' post.author.id %}" style="color:#88e ">{{ post.author.username }}</a>
-        </em></p>
-        <span class ="post-title">{{post.title}}</span>
-        {% if post.categories == 'text/markdown' %}
-          <span class = "post" style="color:black; background-color: blueviolet;">{{ post.description | custom_markdown }}</span>
-        {% endif %}
-        {% if post.categories == 'image/png' %}
-          <br>
-          <img style="max-width: 800px; max-height: 600px;" src="data:image/png;base64,{{ post.description }}">
-          <!-- <img style="max-width: 800px; max-height: 600px" src="{{ post.description }}"/> -->
-          <br>
-        {% endif %}
-        {% if post.categories == 'image/jpeg' %}
-          <br>
-          <img style="max-width: 800px; max-height: 600px;" src="data:image/jpeg;base64,{{ post.description }}">
-          <!-- <img style="max-width: 800px; max-height: 600px" src="{{ post.description }}"/> -->
-          <br>
-        {% endif %}
-        {% if post.categories == 'text/plain' %}
+            @<a href="{% url 'author_profile' post.author.id %}" style="color:#88e ">{{ post.author.username }}</a></em>
+            {% if post.origin != "https://hermes-cmput404.herokuapp.com/" %}
+            <span style="color:rgba(34, 167, 240, 1); font-size:1.3em; cursor:pointer" title="Post from another server: {{post.origin}}">☁</span>
+            {% endif %}
+            {% if post.title != None %}
+              <h2 id="post-title">
+              {{post.title}}</h2>
+            {% endif %}
+           {% if post.categories == 'text/markdown' %}
+            <span class = "post" style="color:black; background-color: blueviolet;">{{ post.description | custom_markdown }}</span>
+          {% endif %}
+          {% if post.categories == 'image/png' %}
+            <br>
+            <img style="max-width: 800px; max-height: 600px;" src="data:image/png;base64,{{ post.description }}">
+            <!-- <img style="max-width: 800px; max-height: 600px" src="{{ post.description }}"/> -->
+            <br>
+          {% endif %}
+          {% if post.categories == 'image/jpeg' %}
+            <br>
+            <img style="max-width: 800px; max-height: 600px;" src="data:image/jpeg;base64,{{ post.description }}">
+            <!-- <img style="max-width: 800px; max-height: 600px" src="{{ post.description }}"/> -->
+            <br>
+          {% endif %}
+          {% if post.categories == 'text/plain' %}
           <div style="font-family:Gotham-Light; font-size:0.7em">{{ post.description  }}</div>
-        {% endif %}
-              <small style="color:#add8e6; font-family:calibri; padding-right:45px" >
-                {{ post.published|date:"SHORT_DATETIME_FORMAT" }}
-                {{ likes_count }} likes
+
+          {% endif %}
+            <small style="color:#add8e6; font-family:calibri; padding-right:45px">
+              {{ post.published }}
+            </small>
+            <small style="color:#add8e6; font-family:calibri; padding-right:45px">
+            <span id='likes-{{post.id}}'>{{ likes_count }}</span> likes
             </small>
            {% if not liked %}
             <a href="/like/{{post.id}}/">
