--- a/mysite/socialdist/templates/socialdist/friends_feed.html
+++ b/mysite/socialdist/templates/socialdist/friends_feed.html
@@ -62,7 +62,7 @@
         <p>
           <em>
             @<a href="{% url 'author_profile' post.author.id %}" style="color:#88e ">{{ post.author.username }}</a></em>
-            {% if likes == -1 %}
+            {% if post.origin != "https://hermes-cmput404.herokuapp.com/" %}
             <span style="color:rgba(34, 167, 240, 1); font-size:1.3em; cursor:pointer" title="Post from another server: {{post.origin}}">☁</span>
             {% endif %}
             {% if post.title != None %}
@@ -91,7 +91,6 @@
             <small style="color:#add8e6; font-family:calibri; padding-right:45px">
               {{ post.published }}
             </small>
-          {% if likes >= 0 %}
           <small style="color:#add8e6; font-family:calibri; padding-right:45px">
             {{ likes }} likes
           </small>
@@ -113,6 +112,7 @@
               class="btn btn-primary"></input>
           </a>
           {% endif %}
+          {% if post.origin == "https://hermes-cmput404.herokuapp.com/" %}
           {% if not post_shared|get_item:post %}
           <a href="/share/{{post.id}}/">
             <input onclick="shareToggle()" type="button" value="🚀 Share" id="share-button"
